src/scss/main.scss
//import all arccorp vars
@use "~arccorp-vars/src/scss/main";

@use "sticky";

#app {
  color: #414042;
  min-height: 80vh;
  width: 100%;
  display: flex;
  //align-items: center;

  .loading {
    color: #dddddd;
    vertical-align: middle;
    width: 100%;
    .loading-icon {
      color: #dddddd;
      display: block;
      font-size: 70px;
      margin: 0 auto;
    }
  }
}

.arc-dg-page {
  width: 100%;
  flex-direction: row;
}

.arc-image-subtitle {
  font-family: main.$arc-font-semibold;
  font-size: 24px;
  line-height: 32px;
  color: main.$tarmac;
  background: main.$arc-teal;
  border-radius: main.$border-radius;
  padding: 30px;
  margin-top: 60px;
  margin-bottom: 30px;
}

.arc-image-disclaimer {
  font-size: 24px;
  line-height: 32px;
  color: main.$landing;
  padding: 30px;
  margin-top: 30px;
  margin-bottom: 30px;
}

